--- a/Mobile/src/app/app.html
+++ b/Mobile/src/app/app.html
@@ -16,13 +16,13 @@
 </ion-row>
 <ion-row no-padding class="other-data">
 <ion-col no-padding class="column">
-<button ion-button icon-left small round full outline color="light" menuClose (click)="profile()">
+<button ion-button icon-left small round outline color="ellumiate" menuClose (click)="profile()">
 <ion-icon name="contact"></ion-icon>
-Edit Profile
+Profile
 </button>
 </ion-col>
 <ion-col no-padding class="column">
-<button ion-button icon-left small round full outline color="light" menuClose (click)="logout()">
+<button ion-button icon-left small round outline color="ellumiate" menuClose (click)="logout()">
 <ion-icon name="log-out"></ion-icon>
 Log Out
 </button>
