--- a/Mobile/src/pages/books-details/books-details.scss
+++ b/Mobile/src/pages/books-details/books-details.scss
@@ -1,3 +1,19 @@
 page-books-details {
 
 }
+
+.numbering-chapters {
+	width: 80px ;
+	height: 50px ;
+	text-align: center ;
+	background-color: #ccc ;
+	padding: 5px ;
+}
+
+.small-text {
+	font-size: 10px ;
+}
+
+.large-chapter-text {
+	font-size: 18px ;
+}
