Full chapter preview

--- a/Mobile/src/app/app.html
+++ b/Mobile/src/app/app.html
@@ -5,12 +5,12 @@
 <ion-row>
 <ion-col col-4>
 <div class="user-avatar">
-	<img [src]="pro_pic" width="100px">
+	<img [src]="global.avatar" width="100px">
 </div>
 </ion-col>
 <ion-col padding-top col-8>
 <h2 ion-text class="no-margin bold text-white">
-{{ fullname }}
+{{ global.fullname }}
 </h2>
 </ion-col>
 </ion-row>
